--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /* Importation des polices */
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400&family=Shrikhand&display=swap");
 /* Fichier: _mixins.scss */
@@ -242,6 +243,60 @@ header h1 {
 }
 .fonctionnement-btn:nth-child(3) .icon {
   color: #9356DC;
+}
+
+.restaurants {
+  padding: 2rem;
+  background-color: #f9f9f9;
+  text-align: center;
+}
+.restaurants h2 {
+  font-family: "Roboto", sans-serif;
+  margin-bottom: 1.5rem;
+  font-size: 2rem;
+  color: #9356DC;
+}
+.restaurants .card {
+  background-color: white;
+  border-radius: 1rem;
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+  margin-bottom: 1.5rem;
+  padding: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  transition: box-shadow 0.3s ease-in-out;
+}
+.restaurants .card img {
+  width: 100%;
+  height: auto;
+  border-radius: 1rem;
+}
+.restaurants .card .card-content {
+  padding: 1rem;
+  text-align: center;
+}
+.restaurants .card .card-content h3 {
+  font-family: "Roboto", sans-serif;
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+}
+.restaurants .card .card-content p {
+  font-family: "Shrikhand", cursive;
+  font-size: 1rem;
+  color: #555;
+}
+.restaurants .card .card-content .like-icon {
+  font-size: 2rem;
+  color: #ccc; /* Couleur initiale du cœur */
+  cursor: pointer;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  transition: color 0.3s ease-in-out; /* Transition douce de la couleur */
+}
+.restaurants .card .card-content .like-icon:hover {
+  color: #9356DC; /* Change la couleur en violet au survol */
 }
 
 @media (min-width: 768px) {
