--- a/sass/components.scss
+++ b/sass/components.scss
@@ -128,6 +128,69 @@ header h1 {
         }
      
     }
+    // _components.scss
+.restaurants {
+    padding: 2rem;
+    background-color: #f9f9f9;
+    text-align: center;
+
+    h2 {
+        font-family: $font-secondary;
+        margin-bottom: 1.5rem;
+        font-size: 2rem;
+        color: $color-primary;
+    }
+
+    .card {
+        background-color: white;
+        border-radius: 1rem;
+        box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
+        margin-bottom: 1.5rem;
+        padding: 1rem;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        transition: box-shadow 0.3s ease-in-out;
+
+        img {
+            width: 100%;
+            height: auto;
+            border-radius: 1rem;
+        }
+
+        .card-content {
+            padding: 1rem;
+            text-align: center;
+
+            h3 {
+                font-family: $font-secondary;
+                font-size: 1.5rem;
+                margin-bottom: 0.5rem;
+            }
+
+            p {
+                font-family: $font-primary;
+                font-size: 1rem;
+                color: #555;
+            }
+
+            .like-icon {
+                font-size: 2rem;
+                color: #ccc; /* Couleur initiale du cœur */
+                cursor: pointer;
+                display: inline-flex;
+                align-items: center;
+                justify-content: center;
+                transition: color 0.3s ease-in-out; /* Transition douce de la couleur */
+
+                &:hover {
+                    color: $color-primary; /* Change la couleur en violet au survol */
+                }
+            }
+        }
+    }
+}
+
 
 
 
