--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -97,7 +97,7 @@ a:hover {
 /* Styles pour les tablettes */
 @media (min-width: 768px) {
   body {
-    padding: 2rem;
+    padding: 0rem;
   }
   h1, h2, h3, h4, h5, h6 {
     margin-bottom: 1.5rem;
@@ -109,10 +109,7 @@ a:hover {
 /* Styles pour les ordinateurs de bureau */
 @media (min-width: 1024px) {
   body {
-    padding: 3rem;
-  }
-  h1, h2, h3, h4, h5, h6 {
-    margin-bottom: 2rem;
+    padding: 0rem;
   }
   a {
     font-size: 1.2rem;
@@ -163,6 +160,8 @@ header h1 {
 .reservation h2 {
   font-family: "Roboto", sans-serif;
   margin-bottom: 1rem;
+  font-weight: bolder;
+  -webkit-text-stroke: 0.7px black;
 }
 
 .reservation p {
@@ -203,7 +202,7 @@ header h1 {
 .fonctionnement h2 {
   text-align: left;
   font: weight 800px;
-  -webkit-text-stroke: 1px black;
+  -webkit-text-stroke: 0.7px black;
 }
 
 .buttons-container {
@@ -245,6 +244,30 @@ header h1 {
   color: #9356DC;
 }
 
+.num-icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #9356DC;
+  color: white;
+  width: 1.5rem;
+  height: 1.5rem;
+  border-radius: 50%;
+  font-size: 1rem;
+  font-weight: lighter;
+}
+
+.fonctionnement-btn .num-icon {
+  position: absolute;
+  left: -0.7rem;
+  transform: translateY(0%);
+}
+
+.fonctionnement-btn {
+  position: relative;
+  padding-left: 3.5rem;
+}
+
 .restaurants {
   padding: 2rem;
   background-color: rgb(235, 235, 235);
@@ -253,7 +276,7 @@ header h1 {
 .restaurants h2 {
   text-align: left;
   font: weight 800px;
-  -webkit-text-stroke: 0.1px black;
+  -webkit-text-stroke: 0.5px black;
   margin-bottom: 20px;
 }
 .restaurants .card {
@@ -400,8 +423,75 @@ header h1 {
   }
 }
 @media (min-width: 1024px) {
-  header h1 {
-    font-size: 3rem;
+  header {
+    height: 7rem;
+  }
+  h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .buttons-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+  }
+  .reservation h2 {
+    padding: 0rem;
+    font-size: 2.9rem;
+  }
+  h2.reservation br {
+    display: none;
+  }
+  .fonctionnement h2 {
+    margin-left: 5rem;
+    margin-bottom: 0rem;
+    font-size: 1.8rem;
+  }
+  .restaurants h2 {
+    font-size: 1.8rem;
+    margin-left: 5rem;
+  }
+  .restaurants .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .restaurants .card {
+    flex-basis: calc(40% - 1rem);
+  }
+  .site-footer {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    align-items: flex-end;
+    padding: 1rem;
+    margin: 0;
+  }
+  .site-footer h4 {
+    margin: 0;
+    padding: 0;
+  }
+  .footer-links {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: 1rem;
+    margin: 0;
+    padding: 0;
+  }
+  .footer-link {
+    display: flex;
+    align-items: baseline;
+    gap: 0.5rem;
+    margin: 0;
+    padding: 0;
+  }
+  .footer-links a {
+    padding: 1rem;
+    display: flex;
+    align-items: flex-end;
   }
 }
 
