--- a/sass/components.scss
+++ b/sass/components.scss
@@ -43,7 +43,9 @@ header h1 {
 }
 .reservation h2 {
     font-family: $font-secondary;
-    margin-bottom: 1rem; 
+    margin-bottom: 1rem;
+    font-weight: bolder;
+    -webkit-text-stroke: 0.7px black;
 }
 .reservation p {
     font-family: $font-secondary; 
@@ -74,7 +76,7 @@ header h1 {
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
 }
 
-// _components.scss
+
 .fonctionnement {
     background-color: white;
     padding: 2rem;
@@ -83,7 +85,7 @@ header h1 {
     
     text-align: left;
     font: weight 800px;
-    -webkit-text-stroke: 1px black;
+    -webkit-text-stroke: 0.7px black;
 }
     .buttons-container {
         display: flex;
@@ -128,6 +130,29 @@ header h1 {
         }
      
     }
+    .num-icon {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        background-color: #9356DC;
+        color: white;
+        width: 1.5rem;
+        height: 1.5rem;
+        border-radius: 50%;
+        font-size: 1rem;
+        font-weight: lighter;
+    }
+    
+    .fonctionnement-btn .num-icon {
+        position: absolute; 
+        left: -0.7rem;
+        transform: translateY(0%); 
+    }
+    
+    .fonctionnement-btn {
+        position: relative;
+        padding-left: 3.5rem; 
+    }
 
 .restaurants {
     padding: 2rem;
@@ -137,7 +162,7 @@ header h1 {
     h2 {
         text-align: left;
     font: weight 800px;
-    -webkit-text-stroke: 0.1px black;
+    -webkit-text-stroke: 0.5px black;
     margin-bottom: 20px;
     }
 
@@ -308,10 +333,92 @@ header h1 {
     header h1 {
         font-size: 2.5rem; 
     }
+
 }
 
 @media (min-width: $breakpoint-desktop) {
-    header h1 {
-        font-size: 3rem; 
+    header {
+        height: 7rem;
     }
+    h1{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .buttons-container{
+        display: flex;
+        flex-direction: row;
+        justify-content: center;
+       
+    }
+    .reservation h2{
+       padding: 0rem;
+       font-size: 2.9rem;
+    }
+    h2.reservation br {
+        display: none;
+    }
+    .fonctionnement h2{
+        margin-left: 5rem;
+        margin-bottom: 0rem;
+        font-size: 1.8rem;
+    }
+    .restaurants{
+       
+        h2 {
+            font-size: 1.8rem;
+            margin-left: 5rem;
+        }
+        .cards {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+    
+        .card {
+            flex-basis: calc(40% - 1rem);
+        }
+    }
+    .site-footer {
+        display: flex;
+        flex-direction: row-reverse; 
+        justify-content: flex-start; 
+        align-items: flex-end; 
+        padding: 1rem;  
+        margin: 0; 
+    }
+    
+    .site-footer h4 {
+        margin: 0; 
+        padding: 0; 
+    }
+    
+    .footer-links {
+        display: flex;
+        flex-direction: row; 
+        align-items: flex-end; 
+        justify-content: flex-end; 
+        gap: 1rem; 
+        margin: 0; 
+        padding: 0; 
+    }
+    
+    .footer-link {
+        display: flex;
+        align-items: baseline; 
+        gap: 0.5rem; 
+        margin: 0; 
+        padding: 0; 
+    }
+    
+    .footer-links a {
+        padding: 1rem;
+        display: flex;
+        align-items: flex-end; 
+    }
+    
+    
+
 }
+
