--- a/assets/css/menu-styles.css
+++ b/assets/css/menu-styles.css
@@ -187,6 +187,16 @@ header h1 {
   color: white;
   cursor: pointer;
   transition: transform 0.2s, box-shadow 0.2s;
+  display: inline-block; /* Assurez-vous que le bouton est inline-block pour que le lien s'affiche correctement */
+  text-align: center; /* Centrer le texte à l'intérieur */
+}
+
+.explore-btn a {
+  text-decoration: white;
+  color: inherit;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .explore-btn:hover {
@@ -511,6 +521,7 @@ header h1 {
   text-decoration: none;
   cursor: pointer;
 }
+
 .back-arrow .material-icons {
   font-size: 2rem;
   color: inherit;
@@ -600,15 +611,41 @@ header h1 {
 .menu-item {
   background-color: white;
   color: #333;
-  padding: 1.8rem;
+  padding: 1rem;
   border: none;
   border-radius: 1rem;
   font-size: 1rem;
   width: 100%;
-  box-shadow: 0px -2px 6px rgba(0, 0, 0, 0.1), 0px 8px 10px rgba(0, 0, 0, 0.1);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  font-family: "Roboto", sans-serif;
+}
+
+.menu-item .item-title {
+  font-size: 1.3rem;
+  -webkit-text-stroke: 0.7px black;
+}
+
+.menu-item .item-details {
   display: flex;
   justify-content: space-between;
-  flex-direction: row;
+  width: 100%;
+  margin-top: 5px;
+}
+
+.menu-item .item-description {
+  font-size: 1rem;
+  color: #666;
+  display: flex;
+  justify-content: flex-start;
+}
+
+.menu-item .item-price {
+  font-size: 1em;
+  font-weight: bold;
+  align-self: flex-end;
+  -webkit-text-stroke: 0.1px black;
 }
 
 .menu-items {
@@ -617,11 +654,27 @@ header h1 {
   gap: 1rem;
 }
 
+.underline {
+  width: 50px; /* Définir la largeur du trait */
+  height: 4px; /* Définir l'épaisseur du trait */
+  background-color: #99E2D0; /* Couleur du trait */
+  margin-bottom: 0.7rem;
+}
+
 .menu-category h3 {
+  font-size: 1.3rem;
+  text-transform: uppercase;
+  margin-top: 2rem;
+  font-weight: 100;
+  color: #666;
+  font-family: "Roboto", sans-serif;
+}
+
+.button-comand {
   display: flex;
-  justify-content: flex-start;
-  align-items: flex-start;
-  padding: 1.8rem;
+  justify-content: center;
+  align-items: center;
+  padding: 2rem;
 }
 
 /*# sourceMappingURL=menu-styles.css.map */
