--- a/sass/components.scss
+++ b/sass/components.scss
@@ -61,7 +61,7 @@ header h1 {
     
 }
 .explore-btn {
-    background: linear-gradient(135deg,#FF79DA, #9356DC, ); 
+    background: linear-gradient(135deg, #FF79DA, #9356DC); 
     border: none; 
     padding: 1rem 2rem; 
     font-size: 1rem; 
@@ -70,11 +70,23 @@ header h1 {
     color: white; 
     cursor: pointer; 
     transition: transform 0.2s, box-shadow 0.2s; 
+    display: inline-block; /* Assurez-vous que le bouton est inline-block pour que le lien s'affiche correctement */
+    text-align: center; /* Centrer le texte à l'intérieur */
 }
+
+.explore-btn a {
+    text-decoration: white;
+    color: inherit;
+    display: block; 
+    width: 100%; 
+    height: 100%; 
+}
+
 .explore-btn:hover {
     transform: translateY(-2px); 
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
 }
+
 
 
 .fonctionnement {
@@ -418,7 +430,6 @@ header h1 {
         display: flex;
         align-items: flex-end; 
     }
-    
     
 
 }
