--- a/sass/menu.scss
+++ b/sass/menu.scss
@@ -1,5 +1,3 @@
-
-
 @import 'variables';
 @import 'mixins';
 @import 'base';
@@ -23,18 +21,20 @@
     color: #333;
     text-decoration: none;
     cursor: pointer;
+}
 
-    .material-icons {
-        font-size: 2rem;
-        color: inherit;
-    }
+.back-arrow .material-icons {
+    font-size: 2rem;
+    color: inherit;
 }
-.image-menu img{
-            width: 100%;
-            height: 18rem;
-            object-fit: cover;
-            position: relative;   
+
+.image-menu img {
+    width: 100%;
+    height: 18rem;
+    object-fit: cover;
+    position: relative;   
 }
+
 .menu-section {
     background-color: rgb(235, 235, 235); 
     border-radius: 50px 50px 0 0; 
@@ -43,22 +43,23 @@
     position: relative; 
     z-index: 1; 
 }
+
 .title {
     display: flex;
     justify-content: space-between; 
     align-items: center; 
     margin-bottom: 1rem;
-   
 }
-   
+
 .menu-section h2 {
     font-family: $font-primary; 
     color: black; 
     font-size: 2rem; 
     margin: 0; 
 }
+
 .like-icon {
-   position: relative;
+    position: relative;
     width: 2rem;
     height: 2rem;
     display: flex;
@@ -107,34 +108,71 @@
 .like-icon:hover::after {
     opacity: 1; /* Affiche le cœur plein au survol */
 }
- .menu-item {
-    background-color:white;
+
+.menu-item {
+    background-color: white;
     color: #333;
-    padding: 1.8rem;
+    padding: 1rem;
     border: none;
     border-radius: 1rem; 
     font-size: 1rem;
     width: 100%;
-    box-shadow: 
-    0px -2px 6px rgba(0, 0, 0, 0.1), 
-    0px 8px 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    font-family: $font-secondary;
+}
+
+.menu-item .item-title {
+    font-size: 1.3rem;
+    -webkit-text-stroke: 0.7px black;
+}
+
+.menu-item .item-details {
     display: flex;
     justify-content: space-between;
-    flex-direction: row;  
- }
- .menu-items {
+    width: 100%;
+    margin-top: 5px;
+}
+
+.menu-item .item-description {
+    font-size: 1rem;
+    color: #666;
+    display: flex;
+    justify-content: flex-start;
+}
+
+.menu-item .item-price {
+    font-size: 1em;
+    font-weight: bold;
+    align-self: flex-end;
+    -webkit-text-stroke: 0.1px black;
+}
+
+
+.menu-items {
     display: flex;
     flex-direction: column;
     gap: 1rem;
-  
- }
-.menu-category {
-    h3 {
-        display: flex;
-        justify-content: flex-start;
-        align-items: flex-start;
-        padding: 1.8rem;
-     }
 }
-  
+.underline {
+    width: 50px; /* Définir la largeur du trait */
+    height: 4px; /* Définir l'épaisseur du trait */
+    background-color:$color-tertiary; /* Couleur du trait */
+    margin-bottom: 0.7rem;
+}
+.menu-category h3{
+    font-size: 1.3rem;
+    text-transform: uppercase;
+    margin-top: 2rem;
+    font-weight: 100;
+    color: #666;
+    font-family: $font-secondary;
+}
+.button-comand {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
+}
 
