--- a/assets/css/menu-styles.css
+++ b/assets/css/menu-styles.css
@@ -105,6 +105,9 @@ a:hover {
   a {
     font-size: 1.1rem;
   }
+  header h1 {
+    font-size: 2.5rem;
+  }
 }
 /* Styles pour les ordinateurs de bureau */
 @media (min-width: 1024px) {
@@ -113,6 +116,89 @@ a:hover {
   }
   a {
     font-size: 1.2rem;
+  }
+  .menu-section {
+    margin-left: 12%;
+    margin-right: 12%;
+  }
+  .menu-section .menu-category {
+    margin-left: 12%;
+    margin-right: 12%;
+  }
+  .menu-section .title {
+    display: flex;
+    justify-content: center;
+  }
+  header {
+    height: 7rem;
+  }
+  h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .reservation h2 {
+    padding: 0rem;
+    font-size: 2.9rem;
+  }
+  h2.reservation br {
+    display: none;
+  }
+  .fonctionnement .buttons-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .fonctionnement h2 {
+    margin-left: 5rem;
+    margin-bottom: 0rem;
+    font-size: 1.8rem;
+  }
+  .restaurants h2 {
+    font-size: 1.8rem;
+    margin-left: 5rem;
+  }
+  .restaurants .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .restaurants .card {
+    flex-basis: calc(40% - 1rem);
+  }
+  .site-footer {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    align-items: flex-end;
+    padding: 1rem;
+    margin: 0;
+  }
+  .site-footer h4 {
+    margin: 0;
+    padding: 0;
+  }
+  .footer-links {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: 1rem;
+    margin: 0;
+    padding: 0;
+  }
+  .footer-link {
+    display: flex;
+    align-items: baseline;
+    gap: 0.5rem;
+    margin: 0;
+    padding: 0;
+  }
+  .footer-links a {
+    padding: 1rem;
+    display: flex;
+    align-items: flex-end;
   }
 }
 header {
@@ -172,7 +258,7 @@ header h1 {
 }
 
 .bold-h2 {
-  font: weight 800px;
+  font-weight: bold;
   -webkit-text-stroke: 1px black;
   line-height: 25px;
 }
@@ -211,7 +297,7 @@ header h1 {
 
 .fonctionnement h2 {
   text-align: left;
-  font: weight 800px;
+  font-weight: bold;
   -webkit-text-stroke: 0.7px black;
 }
 
@@ -285,7 +371,7 @@ header h1 {
 }
 .restaurants h2 {
   text-align: left;
-  font: weight 800px;
+  font-weight: bold;
   -webkit-text-stroke: 0.5px black;
   margin-bottom: 20px;
 }
@@ -330,7 +416,7 @@ header h1 {
 }
 .restaurants .card .card-content h3 {
   font-family: "Roboto", sans-serif;
-  font: weight 800px;
+  font-weight: bold;
   -webkit-text-stroke: 0.4px black;
 }
 .restaurants .card .card-content p {
@@ -427,83 +513,6 @@ header h1 {
   text-decoration: underline; /* Souligne le texte au survol */
 }
 
-@media (min-width: 768px) {
-  header h1 {
-    font-size: 2.5rem;
-  }
-}
-@media (min-width: 1024px) {
-  header {
-    height: 7rem;
-  }
-  h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-  .buttons-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-  .reservation h2 {
-    padding: 0rem;
-    font-size: 2.9rem;
-  }
-  h2.reservation br {
-    display: none;
-  }
-  .fonctionnement h2 {
-    margin-left: 5rem;
-    margin-bottom: 0rem;
-    font-size: 1.8rem;
-  }
-  .restaurants h2 {
-    font-size: 1.8rem;
-    margin-left: 5rem;
-  }
-  .restaurants .cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  .restaurants .card {
-    flex-basis: calc(40% - 1rem);
-  }
-  .site-footer {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-    align-items: flex-end;
-    padding: 1rem;
-    margin: 0;
-  }
-  .site-footer h4 {
-    margin: 0;
-    padding: 0;
-  }
-  .footer-links {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: flex-end;
-    gap: 1rem;
-    margin: 0;
-    padding: 0;
-  }
-  .footer-link {
-    display: flex;
-    align-items: baseline;
-    gap: 0.5rem;
-    margin: 0;
-    padding: 0;
-  }
-  .footer-links a {
-    padding: 1rem;
-    display: flex;
-    align-items: flex-end;
-  }
-}
 .header-container {
   display: flex;
   align-items: center;
@@ -611,47 +620,136 @@ header h1 {
 .menu-item {
   background-color: white;
   color: #333;
-  padding: 1rem;
   border: none;
   border-radius: 1rem;
   font-size: 1rem;
   width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   font-family: "Roboto", sans-serif;
+  box-shadow: 2px 2px 2px lightgrey;
+  overflow: hidden;
+  opacity: 0;
+  animation: fadeIn 1s ease-out forwards;
+  animation-fill-mode: both;
+}
+.menu-item:hover {
+  cursor: pointer;
+}
+.menu-item:hover .box-check {
+  margin-right: 0;
+}
+.menu-item:hover i {
+  animation: rotate 1.5s forwards;
 }
 
-.menu-item .item-title {
+.menu-item:nth-child(1) {
+  animation-delay: 0.3s;
+}
+
+.menu-item:nth-child(2) {
+  animation-delay: 0.6s;
+}
+
+.menu-item:nth-child(3) {
+  animation-delay: 0.9s;
+}
+
+.menu-item:nth-child(4) {
+  animation-delay: 1.2s;
+}
+
+.menu-item:nth-child(5) {
+  animation-delay: 1.5s;
+}
+
+.menu-item:nth-child(6) {
+  animation-delay: 1.8s;
+}
+
+.menu-item:nth-child(7) {
+  animation-delay: 2.1s;
+}
+
+.menu-item:nth-child(8) {
+  animation-delay: 2.4s;
+}
+
+.menu-item:nth-child(9) {
+  animation-delay: 2.7s;
+}
+
+.menu-item:nth-child(10) {
+  animation-delay: 3s;
+}
+
+.menu-description {
+  padding: 0.5rem;
+  flex: 1;
+  overflow: hidden;
+}
+.menu-description .item-title {
   font-size: 1.3rem;
-  -webkit-text-stroke: 0.7px black;
+  margin: 0;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
 }
-
-.menu-item .item-details {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-  margin-top: 5px;
-}
-
-.menu-item .item-description {
+.menu-description .item-description {
   font-size: 1rem;
   color: #666;
-  display: flex;
-  justify-content: flex-start;
-}
-
-.menu-item .item-price {
-  font-size: 1em;
-  font-weight: bold;
-  align-self: flex-end;
-  -webkit-text-stroke: 0.1px black;
+  margin: 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
 
 .menu-items {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+}
+.menu-items .item-price {
+  font-size: 1em;
+  font-weight: bold;
+  margin-left: auto;
+  -webkit-text-stroke: 0.1px black;
+  align-self: flex-end;
+  padding: 1rem;
+}
+
+.box-check {
+  background-color: #99E2D0;
+  border-radius: 0 1rem 1rem 0;
+  padding: 1rem;
+  margin-right: -4rem;
+  transition: margin-right 0.5s;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+.box-check i {
+  display: grid;
+  place-items: center;
+  background-color: #fff;
+  aspect-ratio: 1;
+  width: 2rem;
+  border-radius: 1rem;
+  color: #99E2D0;
+}
+@keyframes rotate {
+  0% {
+    transform: rotate(180deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .underline {
