--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,9 @@ a:hover {
   a {
     font-size: 1.1rem;
   }
+  header h1 {
+    font-size: 2.5rem;
+  }
 }
 /* Styles pour les ordinateurs de bureau */
 @media (min-width: 1024px) {
@@ -113,6 +116,89 @@ a:hover {
   }
   a {
     font-size: 1.2rem;
+  }
+  .menu-section {
+    margin-left: 12%;
+    margin-right: 12%;
+  }
+  .menu-section .menu-category {
+    margin-left: 12%;
+    margin-right: 12%;
+  }
+  .menu-section .title {
+    display: flex;
+    justify-content: center;
+  }
+  header {
+    height: 7rem;
+  }
+  h1 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .reservation h2 {
+    padding: 0rem;
+    font-size: 2.9rem;
+  }
+  h2.reservation br {
+    display: none;
+  }
+  .fonctionnement .buttons-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+  }
+  .fonctionnement h2 {
+    margin-left: 5rem;
+    margin-bottom: 0rem;
+    font-size: 1.8rem;
+  }
+  .restaurants h2 {
+    font-size: 1.8rem;
+    margin-left: 5rem;
+  }
+  .restaurants .cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+  .restaurants .card {
+    flex-basis: calc(40% - 1rem);
+  }
+  .site-footer {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-start;
+    align-items: flex-end;
+    padding: 1rem;
+    margin: 0;
+  }
+  .site-footer h4 {
+    margin: 0;
+    padding: 0;
+  }
+  .footer-links {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-end;
+    justify-content: flex-end;
+    gap: 1rem;
+    margin: 0;
+    padding: 0;
+  }
+  .footer-link {
+    display: flex;
+    align-items: baseline;
+    gap: 0.5rem;
+    margin: 0;
+    padding: 0;
+  }
+  .footer-links a {
+    padding: 1rem;
+    display: flex;
+    align-items: flex-end;
   }
 }
 header {
@@ -172,7 +258,7 @@ header h1 {
 }
 
 .bold-h2 {
-  font: weight 800px;
+  font-weight: bold;
   -webkit-text-stroke: 1px black;
   line-height: 25px;
 }
@@ -187,6 +273,16 @@ header h1 {
   color: white;
   cursor: pointer;
   transition: transform 0.2s, box-shadow 0.2s;
+  display: inline-block; /* Assurez-vous que le bouton est inline-block pour que le lien s'affiche correctement */
+  text-align: center; /* Centrer le texte à l'intérieur */
+}
+
+.explore-btn a {
+  text-decoration: white;
+  color: inherit;
+  display: block;
+  width: 100%;
+  height: 100%;
 }
 
 .explore-btn:hover {
@@ -201,7 +297,7 @@ header h1 {
 
 .fonctionnement h2 {
   text-align: left;
-  font: weight 800px;
+  font-weight: bold;
   -webkit-text-stroke: 0.7px black;
 }
 
@@ -275,7 +371,7 @@ header h1 {
 }
 .restaurants h2 {
   text-align: left;
-  font: weight 800px;
+  font-weight: bold;
   -webkit-text-stroke: 0.5px black;
   margin-bottom: 20px;
 }
@@ -320,7 +416,7 @@ header h1 {
 }
 .restaurants .card .card-content h3 {
   font-family: "Roboto", sans-serif;
-  font: weight 800px;
+  font-weight: bold;
   -webkit-text-stroke: 0.4px black;
 }
 .restaurants .card .card-content p {
@@ -417,81 +513,70 @@ header h1 {
   text-decoration: underline; /* Souligne le texte au survol */
 }
 
-@media (min-width: 768px) {
-  header h1 {
-    font-size: 2.5rem;
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #fff;
+  z-index: 9999;
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 0.5s ease, visibility 0.5s ease;
+  animation: hideLoader 2s forwards; /* Animation pour cacher le loader après 2 secondes */
+}
+
+@keyframes hideLoader {
+  0% {
+    opacity: 1;
+    visibility: visible;
+  }
+  100% {
+    opacity: 0;
+    visibility: hidden;
   }
 }
-@media (min-width: 1024px) {
-  header {
-    height: 7rem;
+.loader {
+  border: 16px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 16px solid #d64cdd;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
   }
-  h1 {
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  100% {
+    transform: rotate(360deg);
   }
-  .buttons-container {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-  }
-  .reservation h2 {
-    padding: 0rem;
-    font-size: 2.9rem;
-  }
-  h2.reservation br {
-    display: none;
-  }
-  .fonctionnement h2 {
-    margin-left: 5rem;
-    margin-bottom: 0rem;
-    font-size: 1.8rem;
-  }
-  .restaurants h2 {
-    font-size: 1.8rem;
-    margin-left: 5rem;
-  }
-  .restaurants .cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-  .restaurants .card {
-    flex-basis: calc(40% - 1rem);
-  }
-  .site-footer {
-    display: flex;
-    flex-direction: row-reverse;
-    justify-content: flex-start;
-    align-items: flex-end;
-    padding: 1rem;
-    margin: 0;
-  }
-  .site-footer h4 {
-    margin: 0;
-    padding: 0;
-  }
-  .footer-links {
-    display: flex;
-    flex-direction: row;
-    align-items: flex-end;
-    justify-content: flex-end;
-    gap: 1rem;
-    margin: 0;
-    padding: 0;
-  }
-  .footer-link {
-    display: flex;
-    align-items: baseline;
-    gap: 0.5rem;
-    margin: 0;
-    padding: 0;
-  }
-  .footer-links a {
-    padding: 1rem;
-    display: flex;
-    align-items: flex-end;
+}
+body {
+  overflow: hidden; /* Empêche le défilement pendant le chargement */
+  height: 100vh;
+}
+
+body.loaded {
+  overflow: auto; /* Réactive le défilement après le chargement */
+  height: auto;
+}
+
+.main-content {
+  opacity: 0;
+  visibility: hidden;
+  animation: showContent 0.5s ease 2s forwards; /* L'animation commence après 2 secondes */
+}
+
+@keyframes showContent {
+  to {
+    opacity: 1;
+    visibility: visible;
   }
 }
 
