--- a/sass/components.scss
+++ b/sass/components.scss
@@ -55,7 +55,7 @@ header h1 {
     
 }
 .bold-h2 {
-    font: weight 800px;
+    font-weight: bold;
     -webkit-text-stroke: 1px black;
     line-height: 25px;
     
@@ -96,7 +96,7 @@ header h1 {
 .fonctionnement h2 {
     
     text-align: left;
-    font: weight 800px;
+    font-weight: bold;
     -webkit-text-stroke: 0.7px black;
 }
     .buttons-container {
@@ -173,7 +173,7 @@ header h1 {
 
     h2 {
         text-align: left;
-    font: weight 800px;
+        font-weight: bold;
     -webkit-text-stroke: 0.5px black;
     margin-bottom: 20px;
     }
@@ -220,7 +220,7 @@ header h1 {
         
             h3 {
                 font-family: $font-secondary;
-                font: weight 800px;
+                font-weight: bold;
     -webkit-text-stroke: 0.4px black;
                
             }
@@ -341,96 +341,7 @@ header h1 {
 
 
 
-@media (min-width: $breakpoint-tablet) {
-    header h1 {
-        font-size: 2.5rem; 
-    }
 
-}
 
-@media (min-width: $breakpoint-desktop) {
-    header {
-        height: 7rem;
-    }
-    h1{
-        display: flex;
-        justify-content: center;
-        align-items: center;
-    }
 
-    .buttons-container{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-       
-    }
-    .reservation h2{
-       padding: 0rem;
-       font-size: 2.9rem;
-    }
-    h2.reservation br {
-        display: none;
-    }
-    .fonctionnement h2{
-        margin-left: 5rem;
-        margin-bottom: 0rem;
-        font-size: 1.8rem;
-    }
-    .restaurants{
-       
-        h2 {
-            font-size: 1.8rem;
-            margin-left: 5rem;
-        }
-        .cards {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: space-around;
-        }
-    
-        .card {
-            flex-basis: calc(40% - 1rem);
-        }
-    }
-  
-    .site-footer {
-        display: flex;
-        flex-direction: row-reverse; 
-        justify-content: flex-start; 
-        align-items: flex-end; 
-        padding: 1rem;  
-        margin: 0; 
-    }
-    
-    .site-footer h4 {
-        margin: 0; 
-        padding: 0; 
-    }
-    
-    .footer-links {
-        display: flex;
-        flex-direction: row; 
-        align-items: flex-end; 
-        justify-content: flex-end; 
-        gap: 1rem; 
-        margin: 0; 
-        padding: 0; 
-    }
-    
-    .footer-link {
-        display: flex;
-        align-items: baseline; 
-        gap: 0.5rem; 
-        margin: 0; 
-        padding: 0; 
-    }
-    
-    .footer-links a {
-        padding: 1rem;
-        display: flex;
-        align-items: flex-end; 
-    }
-    
-
-}
 
