--- a/sass/media-queries.scss
+++ b/sass/media-queries.scss
@@ -1,4 +1,4 @@
-
+@import 'variables';
 /* Styles pour les tablettes */
 @media (min-width: $breakpoint-tablet) {
     body {
@@ -12,6 +12,10 @@
     a {
         font-size: 1.1rem;
     }
+    header h1 {
+        font-size: 2.5rem; 
+    }
+
 }
 
 /* Styles pour les ordinateurs de bureau */
@@ -23,4 +27,103 @@
     a {
         font-size: 1.2rem;
     }
+    .menu-section{
+        margin-left: 12%;
+        margin-right: 12%;
+        .menu-category{
+            margin-left: 12%;
+            margin-right: 12%; 
+        }
+        .title{
+            display: flex;
+            justify-content: center; 
+        }
+    }
+    header {
+        height: 7rem;
+    }
+    h1{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .reservation h2{
+       padding: 0rem;
+       font-size: 2.9rem;
+    }
+    h2.reservation br {
+        display: none;
+    }
+    .fonctionnement {
+        .buttons-container {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center; 
+        }
+        h2{
+            margin-left: 5rem;
+            margin-bottom: 0rem;
+            font-size: 1.8rem;
+        }
+    }
+    .restaurants{
+       
+        h2 {
+            font-size: 1.8rem;
+            margin-left: 5rem;
+        }
+        .cards {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-around;
+        }
+    
+        .card {
+            flex-basis: calc(40% - 1rem);
+        }
+    }
+  
+    .site-footer {
+        display: flex;
+        flex-direction: row-reverse; 
+        justify-content: flex-start; 
+        align-items: flex-end; 
+        padding: 1rem;  
+        margin: 0; 
+    }
+    
+    .site-footer h4 {
+        margin: 0; 
+        padding: 0; 
+    }
+    
+    .footer-links {
+        display: flex;
+        flex-direction: row; 
+        align-items: flex-end; 
+        justify-content: flex-end; 
+        gap: 1rem; 
+        margin: 0; 
+        padding: 0; 
+    }
+    
+    .footer-link {
+        display: flex;
+        align-items: baseline; 
+        gap: 0.5rem; 
+        margin: 0; 
+        padding: 0; 
+    }
+    
+    .footer-links a {
+        padding: 1rem;
+        display: flex;
+        align-items: flex-end; 
+    };
+
 }
+
+
+
