--- a/sass/components.scss
+++ b/sass/components.scss
@@ -4,8 +4,6 @@ header {
     justify-content: center;
     padding: 1rem;
 }
-
-
 header h1 {
     font-family: $font-primary; 
     color: black; 
@@ -13,8 +11,6 @@ header h1 {
     margin: 0; 
     
 }
-
-/* Styles pour la section de localisation */
 .location {
     display: flex; 
     justify-content: center; 
@@ -24,7 +20,6 @@ header h1 {
     text-align: center;
     box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.3);
 }
-
 .location .location-text {
     font-family: $font-secondary; /* Police pour le texte */
     color: #333; /* Couleur du texte */
@@ -57,8 +52,7 @@ header h1 {
 .bold-h2 {
     font-weight: bold;
     -webkit-text-stroke: 1px black;
-    line-height: 25px;
-    
+    line-height: 25px;   
 }
 .explore-btn {
     background: linear-gradient(135deg, #FF79DA, #9356DC); 
@@ -70,31 +64,20 @@ header h1 {
     color: white; 
     cursor: pointer; 
     transition: transform 0.2s, box-shadow 0.2s; 
-    display: inline-block; /* Assurez-vous que le bouton est inline-block pour que le lien s'affiche correctement */
-    text-align: center; /* Centrer le texte à l'intérieur */
+    display: inline-block; 
+    text-align: center; 
+    text-decoration: none; 
 }
-
-.explore-btn a {
-    text-decoration: white;
-    color: inherit;
-    display: block; 
-    width: 100%; 
-    height: 100%; 
-}
-
 .explore-btn:hover {
     transform: translateY(-2px); 
     box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
+    text-decoration: none;
 }
-
-
-
 .fonctionnement {
     background-color: white;
     padding: 2rem;
 }
 .fonctionnement h2 {
-    
     text-align: left;
     font-weight: bold;
     -webkit-text-stroke: 0.7px black;
@@ -106,7 +89,6 @@ header h1 {
         gap: 2rem;
         padding: 2rem;
     }
-
     .fonctionnement-btn {
         background-color: rgb(235, 235, 235);
         color: #333;
@@ -122,8 +104,6 @@ header h1 {
         box-shadow: 
         0px -2px 6px rgba(0, 0, 0, 0.1), 
         0px 8px 10px rgba(0, 0, 0, 0.1); 
-
-        
         &:hover {
             transform: translateY(-2px);
             box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.15);
@@ -140,7 +120,6 @@ header h1 {
         &:nth-child(3) .icon {
             color: $color-primary; 
         }
-     
     }
     .num-icon {
         display: flex;
@@ -154,18 +133,15 @@ header h1 {
         font-size: 1rem;
         font-weight: lighter;
     }
-    
     .fonctionnement-btn .num-icon {
         position: absolute; 
         left: -0.7rem;
         transform: translateY(0%); 
     }
-    
     .fonctionnement-btn {
         position: relative;
         padding-left: 3.5rem; 
     }
-
 .restaurants {
     padding: 2rem;
     background-color: rgb(235, 235, 235);
@@ -177,8 +153,7 @@ header h1 {
     -webkit-text-stroke: 0.5px black;
     margin-bottom: 20px;
     }
-
-    .card {
+    .card { 
         background-color: white;
         border-radius: 1rem;
         margin-bottom: 1.5rem;
@@ -187,7 +162,6 @@ header h1 {
         align-items: center;
         transition: box-shadow 0.3s ease-in-out;
         position: relative;
-
         img {
             width: 100%;
             height: 12rem;
@@ -209,7 +183,6 @@ header h1 {
             font-size: 1rem;
             border-radius: 0.2rem;
         }
-
         .card-content {
             display: flex;
             justify-content: space-between;
@@ -217,20 +190,16 @@ header h1 {
             flex-direction: row;
             padding: 1rem;
             width: 100%;
-        
             h3 {
                 font-family: $font-secondary;
                 font-weight: bold;
     -webkit-text-stroke: 0.4px black;
-               
             }
-
             p {
                 font-family: $font-secondary;
                 display: flex;
                 flex-direction: row;
             }
-
             .like-icon {
                 position: relative;
                 width: 2rem;
@@ -240,7 +209,6 @@ header h1 {
                 justify-content: center;
                 cursor: pointer;
             }
-            
             .like-icon::before {
                 content: '\2661'; /* Cœur vide (♡) */
                 font-size: 1.6rem;
@@ -255,7 +223,6 @@ header h1 {
                 justify-content: center;
                 transition: opacity 0.3s ease-in-out;
             }
-            
             .like-icon::after {
                 content: '\2665'; /* Cœur plein (♥) */
                 font-size: 1.6rem;
@@ -273,22 +240,16 @@ header h1 {
                 opacity: 0; /* Le cœur plein est caché initialement */
                 transition: opacity 0.3s ease-in-out;
             }
-            
             .like-icon:hover::before {
                 opacity: 0; /* Cache le cœur vide au survol */
             }
-            
             .like-icon:hover::after {
                 opacity: 1; /* Affiche le cœur plein au survol */
-            }
-            
-            
-            
+            } 
         }
         .text-container {
             display: flex;
             flex-direction: column;
-         
         }
     }
 }
@@ -297,7 +258,7 @@ header h1 {
     color: white; /* Texte blanc */
     padding: 2rem;
     text-align: center;
-    font-family: $font-secondary; /* Assurez-vous que cette variable est définie dans vos styles globaux */
+    font-family: $font-secondary; 
 
     h4 {
         margin-bottom: 1.5rem;
@@ -327,20 +288,30 @@ header h1 {
     }
         a {
             display: flex;
-            color: white; /* Lien en blanc */
+            color: white; 
             text-decoration: none;
 
             &:hover {
-                text-decoration: underline; /* Souligne le texte au survol */
+                text-decoration: underline; 
             }
         }
     
 }
 
+.cards {
+.card-link {
+    text-decoration: none; 
+    color: inherit; 
+    display: block; /* Rend l'élément <a> comme un bloc */
+}
 
-
-
-
+.card-link:hover {
+    cursor: pointer;
+}
+.card-link:hover .card {
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+}
 
 
 
